--- a/Areas/Admin/Views/Account/Index.cshtml
+++ b/Areas/Admin/Views/Account/Index.cshtml
@@ -5,7 +5,7 @@
     <div class="text-end">
         <a href="/Admin/Account/Create" class="btn btn-success">Thêm tài khoản quản lý</a>
     </div>
-    <div class="table-responsive">
+    <div class="table-responsive py-4">
         <table class="table table-bordered table-striped table-hover align-middle">
             <caption class="text-center">Danh sách tài khoản hiện tại trong hệ thống</caption>
             <thead class="table-dark">
@@ -18,6 +18,7 @@
                     <th>Vai trò</th>
                     <th>Trạng thái</th>
                     <th>Ngày tạo</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -43,6 +44,29 @@
                             }
                         </td>
                         <td>@account.CreatedAt</td>
+                        <td>
+                            <a href="@Url.Action("Edit", "Account", new { id = @account.AccountId })" class="btn btn-warning">Sửa</a>
+                            <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal-@account.AccountId">
+                                Xóa
+                            </button>
+                            <div class="modal fade" id="deleteConfirmationModal-@account.AccountId" tabindex="-1" aria-labelledby="deleteConfirmationModalLabel-@account.AccountId" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="deleteConfirmationModalLabel-@account.AccountId">Xác nhận xóa</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Bạn có chắc chắn muốn xóa danh mục <strong>@account.FullName</strong> không?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+                                            <a href="@Url.Action("Delete", "Account", new { id = @account.AccountId })" class="btn btn-danger">Xóa</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
                     </tr>
                 }
             </tbody>
