--- a/Areas/Admin/Views/Order/Index.cshtml
+++ b/Areas/Admin/Views/Order/Index.cshtml
@@ -63,7 +63,13 @@
                                 Cập nhật
                             </button>
                         </form>
-
+                        <form asp-action="Delete" asp-controller="Order" asp-area="Admin" method="post" class="d-flex align-items-center gap-2">
+                            <input type="hidden" name="id" value="@order.Id" />
+                            <!-- Nút cập nhật -->
+                            <button type="submit" class="btn btn-danger btn-sm">
+                                Xóa
+                            </button>
+                        </form>
                     </div>
                 </td>
             </tr>
